# my_blog-sbackend

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: logging.py  main.py
app/api/: main.py
app/api/routes/: health.py
app/core/: config.py
app/database/: db.py
app/docker/: Dockerfile
app/docker/fastapi/: Dockerfile  entrypoint.sh  start.sh
app/docker/traefik/: traefik.yml
app/docker/traefik/dynamic/: api.yml
app/utils/: wait_db.py
tests/: test_health.py
