[project]
name = "my-blog-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "gunicorn>=24.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
]
[dependency-groups]
dev = [
  "pytest",
   "ruff>=0.14.14",
]

